fixed missing background-color

--- a/app/src/components/Header/Header.scss
+++ b/app/src/components/Header/Header.scss
@@ -4,6 +4,7 @@
   width: 1280px;
   margin-left: 86px;
   color: $grayTextLight;
+  background-color: $white;
 
   .highlight {
     color: $pinkPrimary;
